# xphysics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_flags.txt
inc/: xp.h  xp.hxx
src/: xp.c  xp.cxx  xp_broadphase.cxx  xp_broadphase.hxx  xp_internal.hxx  xp_math.h  xp_math.hxx  xp_math_operators.hxx  xp_narrowphase.cxx  xp_narrowphase.hxx  xp_shape.h  xp_shape.hxx  xp_solver.cxx  xp_solver.hxx
tests/: xp_test_main.c  xp_test_main.cxx  xp_test_math.c  xp_test_math.cxx
